Deixando somente o mui-component-mapper. O mapper do patternfly está dando pau na instalação.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "generate-template": "node ./scripts/generate-mapper.js"
   },
   "workspaces": [
-    "packages/**"
+    "packages/common", 
+    "packages/mui-component-mapper", 
+    "packages/parsers", 
+    "packages/react-form-renderer", 
+    "packages/react-renderer-demo"
   ],
   "jest": {
     "verbose": true,
